--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@fortawesome/fontawesome-free": "^6.7.1",
-    "astro": "^4.16.16"
+    "astro": "^4.16.16",
+    "typescript": "^5.7.2"
   }
 }
