--- a/package.json
+++ b/package.json
@@ -7,12 +7,22 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prepare": "panda codegen"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^4.1.2",
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "astro": "^4.16.16",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@pandacss/dev": "^0.51.1"
   }
 }
