--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.1.2",
+    "@fontsource-variable/noto-sans-jp": "^5.1.1",
+    "@fontsource/hachi-maru-pop": "^5.1.1",
+    "@fontsource/varela-round": "^5.1.1",
+    "@fontsource/zen-kaku-gothic-new": "^5.1.1",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
